wither_derive/tests/fail/model-collection-name-zero-length.stderr
error: wither model collection names must be at least one character in length
 --> $DIR/model-collection-name-zero-length.rs:5:9
  |
5 | #[model(collection_name="")]
  |         ^^^^^^^^^^^^^^^^^^
